style.css
/*
 * General typography and color pallet
 */
body{
  font-family: 'Open Sans', helvetica, sans-serif;
  /*font-size: 0;*/
}

h1, h2, h3{
  font-family: 'Oswald', sans-serif;
}

 /*
  * Main Layout
  */
.container{
  width: 1300px;
  margin: 0 auto;
}

header{
  position: relative; /* for absolute children */
  background: #FFF url('https://www.fillmurray.com/g/1300/600') no-repeat;
  background-size: cover;
  height: 523px;
}

header::before{
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(28, 107, 174, 0.5);
}


/* Position these to bring them above overlay */
header nav, header h1, header h3 {
  position: relative;
}

nav {
  max-width: 1018px;
  margin: 0 auto;

  padding-right: 02.7504912%;
}

/* we need to clear the floats! */
nav::after {
  content: "";
  display: table;
  clear: both;
}

.branding {
  float: left;
  margin-top: 6px;
  margin-left: 14px;
}

.branding h2:hover {
  color: #fff;
}

.branding h2 {
  display: inline-block;
  font-family: 'Open Sans', sans-serif;
  text-transform: uppercase;
  font-size: 16px;
  font-weight: 400;
  margin: 0 0 0 2px;
  letter-spacing: .2px;
  position: relative;
  top: -1px;
}

.branding h2 > span {
  position: relative;
  left: -2px;
  letter-spacing: 0;
}

.branding h2 > span > span {
  letter-spacing: -0.7px;
}

.branding img,
.branding h2 {
  vertical-align: middle;
}

.header-links {
  float: right;
  list-style: none;
  padding: 0;
  margin: 14px 16px 0 0;
}

.header-links li {
  display: inline-block;
  vertical-align: middle;
  margin: 0 0 0 11px;
  text-transform: uppercase;
  font-size: 15px;
}

.header-links li:first-child {
  position: relative;
  top: -1px;
}

.header-links li span {
  display: inline-block;
  transform: scaleY(1.5);
  font-weight: 400;
  letter-spacing: -0.5px;
}

.header-links li span,
.header-links li img {
  vertical-align: middle;
}

.header-links li img {
  margin-left: 4px;
  position: relative;
  top: 1px;
  right: 3px;
}

.header-links li:hover {
  color: #FFF;
  font-size: 16px;
}
/* looked up on MDN and www.css-tricks.com */
.fa-search {
  margin-left: 10px;
  transform: scaleX(-1);
}

header h1,
header h4 {
  text-align: center;
}

header h1 {
  color: white;
  text-shadow: 0 2px 4px rgba(17, 52, 79, 1);
  text-transform: uppercase;
  margin: 150px 0 0 0;

  font-size: 90px;
  line-height: 104px;
  font-weight: 400;
  letter-spacing: 13px;
  word-spacing: 15px;
}

header h4 {
  font-weight: 400;
  margin: 0;
  font-size: 15px;
  letter-spacing: -1px;
}
.headline {
  width: 600px;
  height: 160px;
  margin: 65px 0 0 0;
  /*overflow: hidden;*/
}

.test-container {
  text-align: center;
  margin-left: -4px;
  }

.headline h1 {
  color: #003552;
  text-transform: uppercase;
  /*text-align: center;*/
  font-size: 59px;
  /*margin: 0 0 0 155px;*/
  height: 140px;
  letter-spacing: 2px;
  word-spacing: -3px;
}
.float-contain {
  content:"";
  display: table;
  clear: both;
  overflow: auto;
}
.primary-col {
  float:left;
  width: 620px;
  padding-left: 9px;

  margin-bottom: 69px;
}

 /*is this where my issue is with secondary column collapse??*/
.article-main {
  width: 700px;
  /*clear: right;*/
  margin: 0 0 0 155px;
}

.lab span {
  text-decoration: underline;
  color: #A3B3BF;
}

.lab span:hover {
  font-size: 18px;
  color: #3080BD;
}

.excer {
  text-decoration: underline;
  color: #A3B3BF;
}

.excer span:hover {
  font-size: 18px;
  color: #3080BD;
}
.article-date {
  font-size: 12px;
  position: relative;
  top: -17px;
}

.side-col {
  float: right;
  width: 300px;
  margin-top: 79px;

  margin-left: 222px;
  text-align: center;
}

.author-pic img {
  width: 85px;
  border-radius: 50%;
  text-align: center;
}

.on-date {
  padding-left: 4px;
}
.author-pic{
  position: relative;
}

.author-pic::after {
  content: '';
  display: block;
  position: absolute;
  width: 85px;
  top: 0;
  bottom: 3px;
  left: 108px;
  right: 0;
  background-color: rgba(28, 107, 174, 0.5);
  border-radius: 50%;
}

.author-pic:hover::after {
  display: none;
  cursor: grab;
}

.social-aut {
  position: relative;
  top: 5px;
  color: #106db3;
  font-size: 16px;
  text-transform: uppercase;
}
.social-ul {
  padding-left: 9px;
  font-size: 13px;
  margin-top: 11px;
}

.social-ul li:hover {
  font-size: 14px;
  color: darkblue;
}
.social-links {
  font-size: 12px;
  word-spacing: 20px;
  color: #B4C7CF;
}
.sidebar {
  width: 300px;
  margin: 66px auto 0 11px;
  text-align: left;
}

.sidebar p {
  font-size: 14px;
  text-align: left;
  color: #B4C7CF;
  line-height: 24px;
  margin-top: 6px;
}
.under {
  text-decoration: underline;
}

.under:hover {
  color: #3080BD;
  font-size: 16px;
}
.side-title {
  font-family: 'Oswald', sans-serif;
  font-size: 19px;
  color: #106DB3;
  text-transform: uppercase;
  letter-spacing: -0.5px;
  line-height: 15px;
}
.author-name {
  color: #106db3;
  font-weight: bold;
}

.spantop {
  position: relative;
  top: 7px;
  left: 35px;
  vertical-align: middle;
  color: #B4C7CF;
}
.date {
  text-decoration: underline;
}

.article-date {
  position: relative;
}
.article-date img {
  position: absolute;
  border-radius: 50%;
  width: 23px;
  /*float: left;*/
}

.article-date::after {
  content: '';
  display: block;
  position: absolute;
  width: 23px;
  height: 23px;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(28, 107, 174, 0.5);
  border-radius: 50%;
}
.article-date:hover::after {
  display: none;
}

.article-date img:hover {
  position: absolute;
  width: 40px;
  height: 40px;
  margin-left: -10px;
}
.ad-picture {
  position: relative;
  text-align: center;
  padding-top: 39px;
}

.ad-picture::after {
  content: '';
  display: block;
  position: absolute;
  width: 280px;
  height: 302px;
  top: 39px;
  bottom: 0;
  left: 10px;
  right: 0;
  background-color: rgba(28, 107, 174, 0.5);
}

.ad-picture:hover::after {
  content: '';
  display: block;
  position: absolute;
  width: 280px;
  height: 302px;
  top: 39px;
  bottom: 0;
  left: 10px;
  right: 0;
  background-color: rgba(234, 106, 32, 0.5);
}


.author-pic img {
  position: relative;
}
.ad-picture span {
  float: right;
  text-decoration: underline;
}

.ad-picture span:hover {
  color: #3080BD;
  font-size: 16px;
}
.read-share > span{
  height: 30px;
  font-size: 13px;
  padding: 5px;
  padding-left: 14px;
  padding-right: 14px;
  margin-bottom: 1px;
  margin-right: 4px;
}
.endpara {
  margin-bottom: 21px;
}

.fa-comment, .fa-cloud-download, .fa-share-square-o {
    position: relative;
    right: 14px;
    background-color: #60686E;
    padding: 7px;
}

.fa-comment:hover, .fa-cloud-download:hover, .fa-share-square-o:hover {
  background-color: #083452;
}


.read-comments, .read-later, .share-post {
  background-color: #A3B3BF;
  color: #fff;
}

.read-comments:hover, .read-later:hover, .share-post:hover {
  background-color: #106DB3;
}


.ad-stuff {
  font-size: 12px;
  position: relative;
  font-size: 14px;
  color: #B4C7CF;
  right: 7px;
  top: 2px;

}
.aside p {
  text-align: left;

}

.para1 {
  /*width: 47.5%;*/
  color: #5E686F;
  margin: 25px 0 0 155px;
  /*font-size: 12px;*/
  font-size: 16px;
  /*clear: both; */
  word-spacing: 4px;
  width: 100%;
  line-height: 27px;

}

.p1 {
  margin-bottom: 23px;
}
.rad {
  color: #106db3;
  border-left: 2px solid #D3D3D3;
  height: 58px;
  margin-left: 5px;
  margin-bottom: 22px;
  text-transform: uppercase;
}

.rad h2 {
  position: relative;
  font-family: 'Open Sans', helvetica, sans-serif;
  font-size: 26px;
  font-weight: 400;
  left: 17px;
  top: 14px;
}

/*.social-links {
  float: right;
}*/

.social-links li {
  display: inline;
}

.bottom-headline {
  border-top: 1px solid #DFE8EA;
  text-align: center;
  letter-spacing: 2px;
}
.most-pop {

  font-size: 57px;
  color: #003552;
  text-transform: uppercase;
  padding-bottom: 5px;

}
/*.pic img {
  position: absolute;
  display: inline;
  width: 326px;
}*/
.pic {
  display: inline-block;
  width: 326px;
  height: 332px;
  position: relative;
}
.pic h1 {

  font-size: 30px;
  text-transform: uppercase;
  z-index: 20;
  text-align: justify;
  position: absolute;
  bottom: 15px;
  left: 20px;
  padding-bottom: 0;
  margin-bottom: 0;

}
.above-footer-pics {
  /*display: inline-block;*/ /*this was holding off the footer?!*/
  margin: 0 auto;
  font-size: 0px;
  /*position: absolute;*/
}

.pic-one::after, .pic-two::after,
.pic-three::after, .pic-four::after {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(28, 107, 174, 0.5);
}

.pic-one:hover::after {
  display: none;
}
.pic-two:hover::after {
  display: none;
}
.pic-three:hover::after {
  display: none;
}

.pic-four:hover::after {
  display: none;
}
.pic-one:hover, .pic-two:hover,
.pic-three:hover, .pic-four:hover {
  color: #fff;
  background-color: none;
}

.footer {
  background-color: #083452;
  width: 100%;
  height: 105px;
  color: #A3B3BF;

}
.iron-logo {
  position: relative;
  float: left;
  margin-left: 151px;
  top: 12px;
}

.iron-logo h6 {
  position: relative;
  top: -25px;

}


.footer-nav {
  float: right;
  margin-top: 13px;
  margin-right: 151px;
}
.footer-nav > ul > li{
  display: inline;
  font-size: 12px;
  border-right: 1px solid #A3B3BF;
  letter-spacing: 1px;
  padding-right: 3px;

}

.footer-nav > ul > li > span:hover {
  color: #FFF;
}

.footer-nav > ul > li:nth-child(4) {
  border-right: none;
}

.footer {
  position: absolute;
  margin-bottom: 0;
}
footer h6 {
  display: inline;
  /*font-family: 'Oswald', sans-serif;*/
  font-size: 13px;
  text-decoration: none;
  clear: both;
  font-weight: 400;

}

